fda-134 Updates to download page.

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "pretest": "eslint ./**/*.jsx",
     "test": "flow check",
     "gatsby": "gatsby",
+    "stylus": "gulp stylus",
     "dev": "gulp stylus & gatsby develop -p 3000",
     "build": "gatsby build"
   },
