--- a/pages/animaldrug/phishpharm/_infographics.yaml
+++ b/pages/animaldrug/phishpharm/_infographics.yaml
@@ -1,11 +1,11 @@
-- title: "Phish pharm drug records by water type"
+- title: "Phish-Pharm drug records by water type"
   short: "Drug records by water type"
   dataset: SPL
   description:
     - "This is the openFDA API endpoint for pharmacokinetics data in fish. Phish-Pharm is a free, searchable, literature database that details drug metabolism, depletion, and pharmacokinetics in fish. Updated in 2014, the current version contains data from nearly 600 articles covering 175 aquatic species and over 200 drug and chemical compounds."
   countParam: "water_type"
   filters:
-    - title: "All phish pharm records"
+    - title: "All Phish-Pharm records"
       searchParam: ""
     - title: "Oxytetracycline records"
       searchParam: 'drug.exact="Oxytetracycline"'
@@ -17,14 +17,14 @@
       searchParam: 'drug.exact="Enrofloxacin"'
   type: Line
   dateConstraint: false
-- title: "Phish pharm records over time"
+- title: "Phish-Pharm records over time"
   short: "Records over time"
   dataset: SPL
   description:
     - "This is the openFDA API endpoint for pharmacokinetics data in fish. Phish-Pharm is a free, searchable, literature database that details drug metabolism, depletion, and pharmacokinetics in fish. Updated in 2014, the current version contains data from nearly 600 articles covering 175 aquatic species and over 200 drug and chemical compounds."
   countParam: "pub_date"
   filters:
-    - title: "All phish pharm records"
+    - title: "All Phish-Pharm records"
       searchParam: ""
     - title: "Catfish records"
       searchParam: "species:catfish"
@@ -33,14 +33,14 @@
       searchParam: 'genus_species.exact="Oncorhynchus mykiss"'
   type: Line
   dateConstraint: false
-- title: "Phish pharm sample types"
+- title: "Phish-Pharm sample types"
   short: "Sample types"
   dataset: SPL
   description:
     - "This is the openFDA API endpoint for pharmacokinetics data in fish. Phish-Pharm is a free, searchable, literature database that details drug metabolism, depletion, and pharmacokinetics in fish. Updated in 2014, the current version contains data from nearly 600 articles covering 175 aquatic species and over 200 drug and chemical compounds."
   countParam: "sample.exact"
   filters:
-    - title: "All phish pharm records"
+    - title: "All Phish-Pharm records"
       searchParam: ""
     - title: "Records with muscle samples"
       searchParam: "sample:muscle"
