--- a/pages/animaldrug/phishpharm/_meta.yaml
+++ b/pages/animaldrug/phishpharm/_meta.yaml
@@ -1,9 +1,9 @@
-documentTitle: openFDA › Animal Drugs › Phish Pharm API
-name: Animal Drug Phish Pharm
+documentTitle: openFDA › Animal Drugs › Phish-Pharm API
+name: Animal Drug Phish-Pharm
 description: "The FDA’s Center for Veterinary Medicine Office of Research developed and regularly updates Phish-Pharm, a free, searchable, literature database that details drug metabolism, depletion, and pharmacokinetics in fish."
 datasets:
   - SPL
-label: Animal Drug Phish Pharm
+label: Animal Drug Phish-Pharm
 path: /animaldrug/phishpharm
 start: 19920101
 dateConstraintKey: effective_time
