--- a/pages/animaldrug/phishpharm/reference/_meta.yaml
+++ b/pages/animaldrug/phishpharm/reference/_meta.yaml
@@ -1,8 +1,8 @@
-documentTitle: openFDA › Animal Drugs › Phish Pharm API Reference
-name: Animal Drug Phish Pharm Reference
+documentTitle: openFDA › Animal Drugs › Phish-Pharm API Reference
+name: Animal Drug Phish-Pharm Reference
 description: ""
 datasets:
   - SPL
-label: Animal Drug Phish Pharm API Reference
+label: Animal Drug Phish-Pharm API Reference
 path: /animaldrug/phishpharm/reference
 type: endpoint
