--- a/pages/animaldrug/phishpharm/_explorers.yaml
+++ b/pages/animaldrug/phishpharm/_explorers.yaml
@@ -2,7 +2,7 @@ oneRecord:
   params:
     - search for all records with pub_date between 1992 and 1996.
     - limit to 1 record.
-  query: 'http://ec2-54-86-220-160.compute-1.amazonaws.com:8000/animaldrug/phishpharm.json?search=pub_date=[1992+TO+1996]&limit=1'
+  query: 'https://api.fda.gov/animaldrug/phishpharm.json?search=pub_date=[1992+TO+1996]&limit=1'
   description:
     - This query searches for all records by publication year, and asks for a single one.
     - See the [reference](/animaldrug/phishpharm/reference/) for more about pub_date. Brackets [ ] are used to specify a range for date, number, or string fields.
@@ -10,7 +10,7 @@ oneRecord:
 countBySpecies:
   params:
     - count the number of records of each species.
-  query: 'http://ec2-54-86-220-160.compute-1.amazonaws.com:8000/animaldrug/phishpharm.json?count=species.exact'
+  query: 'https://api.fda.gov/animaldrug/phishpharm.json?count=species.exact'
   description:
     - This query returns a count of records for each species.
     - The suffix .exact is required by openFDA to count the unique full phrases in the field openfda.product_type. Without it, the API will count each word in that field individually—Trout, rainbow would be counted as separate values, Trout, and rainbow.
