--- a/pages/animaldrug/event/_explorers.yaml
+++ b/pages/animaldrug/event/_explorers.yaml
@@ -5,4 +5,4 @@ oneReport:
     - See the [header fields reference](/animaldrug/event/reference/) for more about original_receive_date. Brackets `[ ]` are used to specify a range for date, number, or string fields.
   params:
     - search for all records with original_receive_date between Jan 01, 2004 and Nov 07, 2016. limit to 1 record.
-  query: 'http://ec2-54-86-220-160.compute-1.amazonaws.com:8000/animaldrug/event.json?search=original_receive_date:[20040101+TO+20161107]&limit=1'
+  query: 'http://openfda-ci-elb-1069226378.us-east-1.elb.amazonaws.com/animaldrug/event.json?search=original_receive_date:[20040101+TO+20161107]&limit=1'
